<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.google.android.gms.ads.AdView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    ads:adUnitId="ca-app-pub-4280826531916194/3987301506"
    ads:adSize="SMART_BANNER"/>
        <ScrollView android:id="@+id/ScrollViewMain" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/linearLayoutSub" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
    
    <Button
        android:id="@+id/buttonFwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_fwd" />

    <Button
        android:id="@+id/buttonRev"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bwd" />
    
    <Button
        android:id="@+id/buttonDel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_delete" />
      
    <TextView
        android:id="@+id/textViewDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_date" />

    <DatePicker
        android:id="@+id/datePickerDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_start_time" />

    <TimePicker
        android:id="@+id/timePickerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_time" />
    <EditText
        android:id="@+id/editHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_point" />
    <EditText
        android:id="@+id/editTextPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_weather" />
    <Spinner
        android:id="@+id/spinnerWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_wind" />
    <Spinner
        android:id="@+id/spinnerWind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_size" />
    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewCloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_cloud" />
    <Spinner
        android:id="@+id/spinnerCloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_board" />
    <Spinner
        android:id="@+id/spinnerBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/textViewTakeOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_takeoff" />
    <EditText
        android:id="@+id/editTextTakeOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />
    <TextView
        android:id="@+id/textViewComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disp_comment" />
    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />   
    </LinearLayout>
	</ScrollView> 
</LinearLayout>